--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="A platform for wellness, yoga and meditative practices">
+    <meta name="keywords" content="yoga,wellness,meditation,yoga studio, breathing exercises, yoga poses">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Dualism</title>
 </head>
 <body>
     <h1>Dualism</h1>
