Add basic navigation strucutre and heading

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <title>Dualism</title>
 </head>
 <body>
-    <h1>Dualism</h1>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Dualism</h1>
+        </a>
+        <nav id="menu">
+            <ul class="clearfix">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Exercises</a>
+                </li>
+                <li>
+                    <a href="#" >Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
