--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Dualism</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -17,17 +19,17 @@
         <nav id="menu">
             <ul class="clearfix">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="exercises.html">Exercises</a>
+                    <a href="exercises.html" class="active">Exercises</a>
                 </li>
                 <li>
-                    <a href="signup.html" >Sign Up</a>
+                    <a href="signup.html" class="active">Sign Up</a>
                 </li>
             </ul>
         </nav>
     </header>
 </body>
-<h2>About us</h2>
+
 </html>
