Add hero video to index with controls

--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
         <nav id="menu">
             <ul class="clearfix">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="signup.html" class="active">Sign Up</a>
                 </li>
                 <li>
                     <a href="exercises.html" class="active">Exercises</a>
                 </li>
                 <li>
-                    <a href="signup.html" class="active">Sign Up</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <div id="hero-video">
+        <video src="assets/videos/herovideo.mp4" muted loop controls autoplay width="100%">
+            <p>Your browser doesn't support HTML5 video.</p>
+            <a href="https://www.pexels.com/video/a-woman-exercising-8232438/">Link to the video</a>
+        </video>
+    </div>
     <footer>
         <ul class="social-networks">
             <li>
