Add and style content for index page

--- a/index.html
+++ b/index.html
@@ -33,32 +33,69 @@
     <div id="hero-video">
         <video src="assets/videos/herovideo.mp4" muted loop controls autoplay width="100%">
             <p>Your browser doesn't support HTML5 video.</p>
-            <a href="https://www.pexels.com/video/a-woman-exercising-8232438/">Link to the video</a>
+            <a href="https://www.pexels.com/video/a-woman-doing-yoga-8232560/">Link to the video</a>
         </video>
     </div>
-    <footer>
-        <ul class="social-networks">
-            <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
-            </li>
-            <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
-            </li>
-            <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-            </li>
-        </ul>
-    </footer>
+    <section id="welcome">
+        <div>
+            <h2 id="about-us">Dualism</h2>
+            <p>Yoga carries with it the philosophy that the spirit, the mind and the body are one.
+                The name is rooted in the view of the mind and body being dual, and interconnected.</p>
+            <hr>
+            <p>The purpose of 'Dualism' is to provide access to yoga, as a way of life, that truly bridges the gap and
+                brings
+                harmony between mind and body.</p>
+        </div>
+        <hr>
+        <div>
+            <h2>What is yoga?</h2>
+            <p>Yoga focuses on bringing harmony between the mind and body, it is a group of physical, mental and
+                spiritual practices aimed to discipline the body and mind.</p>
+            <h2>Benefits</h2>
+            <h3>Improves flexibility</h3>
+            <p>Even the lowest intensity styles increase flexibility
+            </p>
+            <h3>Helps relieve stress</h3>
+            <p>A combination of frequent movement-based yoga therapy and breathing-based exercises can significantly
+                relieve anxiety.</p>
+            <h3>Increases strength</h3>
+            <p>In one small study, yoga practitioners were shown to have increased bone density in their spine and hips,
+                compared to people in a control group.
+            </p>
+            <h3>Relieves depression</h3>
+            <p> In a study of coal miners with chronic obstructive pulmonary disease, or C.O.P.D., yoga was shown to
+                alleviate depression and anxiety.
+            </p>
+            <h3>Improves brain functioning</h3>
+            <p>A database from the National Institutes of Health found that practicing yoga activated areas of the brain
+                responsible for motivation, executive functioning and neuroplasticity.</p>
+            <hr>
+        </div>
+        <footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)"><i
+                            class="fab fa-twitter-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"
+                        aria-label="Visit our YouTube page (opens in a new tab)"><i
+                            class="fab fa-youtube-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
+        </footer>
 
-    <!-- font awesome script -->
-    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+        <!-- font awesome script -->
+        <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
