Add contact us section to all pages and styled it

--- a/index.html
+++ b/index.html
@@ -71,31 +71,74 @@
                 responsible for motivation, executive functioning and neuroplasticity.</p>
             <hr>
         </div>
-        <footer>
-            <ul class="social-networks">
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Twitter page (opens in a new tab)"><i
-                            class="fab fa-twitter-square"></i></a>
-                </li>
-                <li>
-                    <a href="https://youtube.com" target="_blank" rel="noopener"
-                        aria-label="Visit our YouTube page (opens in a new tab)"><i
-                            class="fab fa-youtube-square"></i></a>
-                </li>
-                <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopener"
-                        aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
-                </li>
-            </ul>
-        </footer>
+    </section>
+    <hr>
+    <div>
+        <h2>Contact</h2>
+    </div>
+    <hr>
+    <section id="contact">
+        <div>
+            <h3>Open times</h3>
 
-        <!-- font awesome script -->
-        <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Open</th>
+                    <th>Close</th>
+                </tr>
+                <tr>
+                    <td>Mon - Fri</td>
+                    <td>07:00-</td>
+                    <td>21:00</td>
+                </tr>
+                <tr>
+                    <td>Weekend</td>
+                    <td>10:00-</td>
+                    <td>22:00</td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <h3>Get in touch</h3>
+
+            <div>
+                <span class="bold">Phone: </span>
+                <span>0207 000 0000</span>
+            </div>
+            <div>
+                <span class="bold">Email: </span>
+                <span>email@dualismyoga.com</span>
+            </div>
+        </div>
+        <div>
+            <h3>Address</h3>
+            <p>Dualism Yoga Studio,<br>4 Calm Street,<br>London</p>
+        </div>
+    </section>
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
