Add images and text content to exercise a

--- a/exercises.html
+++ b/exercises.html
@@ -30,6 +30,115 @@
             </ul>
         </nav>
     </header>
+    <section class="poses-intro">
+        <div>
+            <h1>Poses</h1>
+            <p>These are the top 3 foundational poses for everyone</p>
+        </div>
+    </section>
+    <section id="poses">
+        <div>
+            <div>
+                <img src="assets/images/childpose.jpeg" alt="child's pose yoga pose">
+            </div>
+            <div>
+                <h2>1.Child's Pose</h2>
+                <p>This calming pose is a good default pause position.</p>
+                <p>You can use child’s pose to rest and refocus before continuing to your next pose. It gently stretches
+                    your lower back, hips, thighs, knees and ankles and relaxes your spine, shoulders and neck.</p>
+                <p>Do it: When you want to get a nice gentle stretch through your neck spine and hips.</p>
+                <p>Skip it: If you have knee injuries or ankle problems. Avoid also if you have high blood pressure or
+                    are
+                    pregnant.</p>
+                <p>Modify: You can rest your head on a cushion or block. You can place a rolled towel under your ankles
+                    if
+                    they are uncomfortable.
+                    <p>Be mindful: Focus on relaxing the muscles of the spine and lower back as you breathe.</p>
+            </div>
+        </div>
+        <div>
+            <img src="assets/images/downward dog.jpeg" alt="downward-dog yogapose">
+        </div>
+        <div>
+            <h2>2.Downward-Facing Dog</h2>
+            <p>Downward-facing dog strengthens the arms, shoulders and back while stretching the hamstrings,
+                calves and arches of your feet. It can also help relieve back pain.
+            </p>
+            <p>Do it: To help relieve back pain.
+            </p>
+            <p>Skip it:This pose is not recommended if you have carpal tunnel syndrome or other wrist problems,
+                have high blood pressure or are in the late stages of pregnancy.
+            </p>
+            <p>Modify:You can do the pose with your elbows on the ground, which takes the weight off your
+                wrists. You can also use blocks under your hands, which may feel more comfortable.
+                <p>Be mindful: Focus on distributing the weight evenly through your palms and lifting your hips
+                    up and back, away from your shoulders.
+                </p>
+        </div>
+        <div>
+            <div>
+                <img src="assets/images/plank pose.jpeg" alt="plank-pose yogapose">
+            </div>
+            <div>
+                <h2>3.Plank Pose</h2>
+                <p>A commonly seen exercise, plank helps build strength in the core, shoulders, arms and legs.
+                </p>
+                <p>Do it: Plank pose is good if you are looking to tone your abs and build strength in your upper body.
+                </p>
+                <p>Skip it: Avoid plank pose if you suffer from carpal tunnel syndrome. It can be hard on your wrists.
+                    You might also skip it or modify if you have low back pain.
+                </p>
+                <p>Modify: You can modify it by placing your knees on the floor.</p>
+                <p>Be mindful: As you do a plank, imagine the back of your neck and spine lengthening.
+                </p>
+            </div>
+        </div>
+    </section>
+    </section>
+    <hr>
+    <div>
+        <h2>Contact</h2>
+    </div>
+    <hr>
+    <section id="contact">
+        <div>
+            <h3>Open times</h3>
+
+            <table>
+                <tr>
+                    <th></th>
+                    <th>Open</th>
+                    <th>Close</th>
+                </tr>
+                <tr>
+                    <td>Mon - Fri</td>
+                    <td>07:00-</td>
+                    <td>21:00</td>
+                </tr>
+                <tr>
+                    <td>Weekend</td>
+                    <td>10:00-</td>
+                    <td>22:00</td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <h3>Get in touch</h3>
+
+            <div>
+                <span class="bold">Phone: </span>
+                <span>0207 000 0000</span>
+            </div>
+            <div>
+                <span class="bold">Email: </span>
+                <span>email@dualismyoga.com</span>
+            </div>
+        </div>
+        <div>
+            <h3>Address</h3>
+            <p>Dualism Yoga Studio,<br>4 Calm Street,<br>London</p>
+        </div>
+    </section>
     <footer>
         <ul class="social-networks">
             <li>
