--- a/signup.html
+++ b/signup.html
@@ -30,6 +30,51 @@
             </ul>
         </nav>
     </header>
+</section>
+<hr>
+<div>
+    <h2>Contact</h2>
+</div>
+<hr>
+<section id="contact">
+    <div>
+        <h3>Open times</h3>
+
+        <table>
+            <tr>
+                <th></th>
+                <th>Open</th>
+                <th>Close</th>
+            </tr>
+            <tr>
+                <td>Mon - Fri</td>
+                <td>07:00-</td>
+                <td>21:00</td>
+            </tr>
+            <tr>
+                <td>Weekend</td>
+                <td>10:00-</td>
+                <td>22:00</td>
+            </tr>
+        </table>
+    </div>
+    <div>
+        <h3>Get in touch</h3>
+
+        <div>
+            <span class="bold">Phone: </span>
+            <span>0207 000 0000</span>
+        </div>
+        <div>
+            <span class="bold">Email: </span>
+            <span>email@dualismyoga.com</span>
+        </div>
+    </div>
+    <div>
+        <h3>Address</h3>
+        <p>Dualism Yoga Studio,<br>4 Calm Street,<br>London</p>
+    </div>
+</section>
     <footer>
         <ul class="social-networks">
             <li>
