--- a/exercises.html
+++ b/exercises.html
@@ -94,6 +94,19 @@
             </div>
         </div>
     </section>
+    <section class="breathing-intro">
+        <div>
+            <h2>Breathing Techniques</h2>
+            <hr>
+        </div>
+        <div id="breathing-video">
+            <iframe width="90%" height="450" src="https://www.youtube.com/embed/HGGI5GXXzz4"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </iframe>
+        </div>
+    </section>
     </section>
     <hr>
     <div>
