Add form content for sign up page and fixed navigation order on all pages

--- a/exercises.html
+++ b/exercises.html
@@ -19,18 +19,19 @@
         <nav id="menu">
             <ul class="clearfix">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="signup.html" class="active">Sign Up</a>
                 </li>
                 <li>
                     <a href="exercises.html" class="active">Exercises</a>
                 </li>
                 <li>
-                    <a href="signup.html" class="active">Sign Up</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
+            </ul>
             </ul>
         </nav>
     </header>
-    <section class="poses-intro">
+    <section class="exercises-intro">
         <div>
             <h1>Poses</h1>
             <p>These are the top 3 foundational poses for everyone</p>
@@ -94,7 +95,7 @@
             </div>
         </div>
     </section>
-    <section class="breathing-intro">
+    <section class="exercises-intro">
         <div>
             <h2>Breathing Techniques</h2>
             <hr>
