Style the form and add background image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
     <hr>
     <div>
-        <h2>Contact</h2>
+        <h2>Contact Us</h2>
     </div>
     <hr>
     <section id="contact">
