--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <div id="hero-video">
-        <video src="assets/videos/herovideo.mp4" muted loop controls autoplay width="100">
+        <video width="100" src="assets/videos/herovideo.mp4" muted loop controls autoplay>
             <p>Your browser doesn't support HTML5 video.</p>
             <a href="https://www.pexels.com/video/a-woman-doing-yoga-8232560/">Link to the video</a>
         </video>
