Fix html errors

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </nav>
     </header>
     <div id="hero-video">
-        <video width="100" src="assets/videos/herovideo.mp4" muted loop controls autoplay>
+        <video width="100%" src="assets/videos/herovid2.mp4" muted loop controls autoplay>
             <p>Your browser doesn't support HTML5 video.</p>
-            <a href="https://www.pexels.com/video/a-woman-doing-yoga-8232560/">Link to the video</a>
+            <a href="https://www.pexels.com/video/a-woman-exercising-8232438/">Link to the video</a>
         </video>
     </div>
     <section id="welcome">
