Fixing media queries issues

--- a/exercises.html
+++ b/exercises.html
@@ -39,7 +39,7 @@
     </section>
     <section id="poses">
         <div>
-            <div>
+            <div class="pose-images">
                 <img src="assets/images/childpose.jpeg" alt="child's pose yoga pose">
             </div>
             <div>
@@ -57,7 +57,7 @@
                     <p>Be mindful: Focus on relaxing the muscles of the spine and lower back as you breathe.</p>
             </div>
         </div>
-        <div>
+        <div class="pose-images">
             <img src="assets/images/downward dog.jpeg" alt="downward-dog yogapose">
         </div>
         <div>
@@ -77,7 +77,7 @@
                 </p>
         </div>
         <div>
-            <div>
+            <div class="pose-images">
                 <img src="assets/images/plank pose.jpeg" alt="plank-pose yogapose">
             </div>
             <div>
