Fixing media queries error

--- a/exercises.html
+++ b/exercises.html
@@ -40,7 +40,7 @@
     <section id="poses">
         <div>
             <div class="pose-images">
-                <img src="assets/images/childpose.jpeg" alt="child's pose yoga pose">
+                <img src="assets/images/childpose.jpeg" alt="child's pose yoga pose" class="pose-images">
             </div>
             <div>
                 <h2>1.Child's Pose</h2>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="pose-images">
-            <img src="assets/images/downward dog.jpeg" alt="downward-dog yogapose">
+            <img src="assets/images/downward dog.jpeg" alt="downward-dog yogapose" class="pose-images">
         </div>
         <div>
             <h2>2.Downward-Facing Dog</h2>
@@ -78,7 +78,7 @@
         </div>
         <div>
             <div class="pose-images">
-                <img src="assets/images/plank pose.jpeg" alt="plank-pose yogapose">
+                <img src="assets/images/plank pose.jpeg" alt="plank-pose yogapose" class="pose-images">
             </div>
             <div>
                 <h2>3.Plank Pose</h2>
