Fixed all errors and finishing touches

--- a/exercises.html
+++ b/exercises.html
@@ -28,18 +28,18 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
-            </ul>
+            
         </nav>
     </header>
     <section class="exercises-intro">
         <div>
-            <h1>Poses</h1>
+            <h2>Poses</h2>
             <p>These are the top 3 foundational poses for everyone</p>
         </div>
     </section>
     <section id="poses">
         <div>
-            <div class="pose-images">
+            <div>
                 <img src="assets/images/childpose.jpeg" alt="child's pose yoga pose" class="pose-images">
             </div>
             <div>
@@ -57,8 +57,8 @@
                     <p>Be mindful: Focus on relaxing the muscles of the spine and lower back as you breathe.</p>
             </div>
         </div>
-        <div class="pose-images">
-            <img src="assets/images/downward dog.jpeg" alt="downward-dog yogapose" class="pose-images">
+        <div>
+            <img src="assets/images/downwarddog.jpeg" alt="downward-dog yogapose" class="pose-images">
         </div>
         <div>
             <h2>2.Downward-Facing Dog</h2>
@@ -77,8 +77,8 @@
                 </p>
         </div>
         <div>
-            <div class="pose-images">
-                <img src="assets/images/plank pose.jpeg" alt="plank-pose yogapose" class="pose-images">
+            <div>
+                <img src="assets/images/plankpose.jpeg" alt="plank-pose yogapose" class="pose-images">
             </div>
             <div>
                 <h2>3.Plank Pose</h2>
@@ -100,14 +100,13 @@
             <h2>Breathing Techniques</h2>
             <hr>
         </div>
-        <div id="breathing-video">
-            <iframe width="90%" height="450" src="https://www.youtube.com/embed/HGGI5GXXzz4"
-                title="YouTube video player" frameborder="0"
+        <div>
+            <iframe id="breathing-video" height="450" src="https://www.youtube.com/embed/HGGI5GXXzz4"
+                title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                allowfullscreen>
             </iframe>
         </div>
-    </section>
     </section>
     <hr>
     <div>
