--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </ul>
         </nav>
     </header>
-    <div id="hero-video">
-        <video width="100%" src="assets/videos/herovideo.mp4" muted loop controls autoplay>
+    <div>
+        <video id="hero-video" src="assets/videos/herovideo.mp4" muted loop controls autoplay>
             <p>Your browser doesn't support HTML5 video.</p>
             <a href="https://www.pexels.com/video/a-woman-exercising-8232438/">Link to the video</a>
         </video>
